--- a/grades/templates/grades/indCourse.html
+++ b/grades/templates/grades/indCourse.html
@@ -39,13 +39,13 @@
     <div class="container">
         <!-- <div id="curve_chart" style="width: 900px; height: 500px"></div> -->
         {% if user.is_authenticated %}
-        <div class = "display: inline-block;">
-            <div style = "float:left;padding-top: 20px;">
-            <a href="{% url 'grades:index' %}"><i class = "fa fa-angle-left"></i> Back</a>
+        <div class="display: inline-block;">
+            <div style="float:left;padding-top: 20px;">
+                <a href="{% url 'grades:index' %}"><i class="fa fa-angle-left"></i> Back</a>
+            </div>
+            <div style="text-align: center; font-size: 40px;"><strong>{{ indCourse.course_name }}</strong></div>
         </div>
-        <div style = "text-align: center; font-size: 40px;"><strong>{{ indCourse.course_name }}</strong></div>
-    </div>
-        
+
         {% if indCourse.course_grade == 0 is True %}
         <div>
             <h2 style="float: left;">Current grade:</h2>
@@ -137,96 +137,97 @@
         {% endfor %}
         {% endif %}
         {% if indCourse.asstype_set.exists %}
-        <div style = "position: relative; bottom: -225;">
-        <h4>Enter New Assignment</h4>
-        <form action="{% url 'grades:NewAssignment2' indCourse.id%}" method="post">
-            {% csrf_token %}
-            <!-- {{ form }} -->
+        <div style="position: relative; bottom: -150;">
+            <h4>Enter New Assignment</h4>
+            <form action="{% url 'grades:NewAssignment2' indCourse.id%}" method="post">
+                {% csrf_token %}
+                <!-- {{ form }} -->
 
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <div>
-                        <label for="ass_name">Assignment Name</label>
-                        <input class="form-control" type="text" name="ass_name" id="assname"
-                            placeholder="Assignment name" required>
-                        <div class="invalid-feedback">
-                            Please enter a name.
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <div>
+                            <label for="ass_name">Assignment Name</label>
+                            <input class="form-control" type="text" name="ass_name" id="assname"
+                                placeholder="Assignment name" required>
+                            <div class="invalid-feedback">
+                                Please enter a name.
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-md-4 mb-3">
-                    <label for="grade">Enter Grade Achieved</label>
-                    <input class="form-control" type="number" name="grade" id="grade" placeholder="E.g. 100%" required>
-                </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="grade">Enter Grade Achieved</label>
+                        <input class="form-control" type="number" name="grade" id="grade" placeholder="E.g. 100%"
+                            required>
+                    </div>
 
-                <div class="col-md-4 mb-3">
+                    <div class="col-md-4 mb-3">
 
-                    <label for="ass_type">Select Assignment Type</label>
-                    <select class="form-control" id="assignment_type_input" name="ass_type" required>
-                        <option value="" disabled selected>Assignment Type</option>
-                        {% for assType in indCourse.asstype_set.all %}
-                        <option value={{ assType.id }}>{{ assType.ass_type }}</option>
-                        {% endfor %}
-                    </select>
-                    <!-- </div> -->
+                        <label for="ass_type">Select Assignment Type</label>
+                        <select class="form-control" id="assignment_type_input" name="ass_type" required>
+                            <option value="" disabled selected>Assignment Type</option>
+                            {% for assType in indCourse.asstype_set.all %}
+                            <option value={{ assType.id }}>{{ assType.ass_type }}</option>
+                            {% endfor %}
+                        </select>
+                        <!-- </div> -->
+
+                    </div>
+
 
                 </div>
+                {% if form.errors %}
+                {% for field in form %}
+                {% for error in field.errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+                {% endfor %}
+                {% endfor %}
 
-                
-            </div>
-            {% if form.errors %}
-            {% for field in form %}
-            {% for error in field.errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}</strong>
-            </div>
-            {% endfor %}
-            {% endfor %}
-           
-            {% endif %}
-            
-            <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
-        </form>
-        {% endif %}
-        <h4>Enter New Assignment Type</h4>
-        <div>
-            <form action="{% url 'grades:NewType' indCourse.id%}" method="post">
-                {% csrf_token %}
-                <div class="form-row">
-                    <div class = "col-md-6 mb-2">
-                <label for="ass_type" >Assignment Type</label>
-                <input class="form-control " type="text" name="ass_type" id="ass_type" 
-                    placeholder="E.g. test" required>
-                </div>
-                <div class = "col-md-6 mb-2">
-                <label for="grade_percentage" >Assignment Weight</label>
-                <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" 
-                    placeholder="E.g. 25%" required>
-                </div>
-                <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
-            (in percent)</label>
-        <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
-                </div>        
-                {% if form2.errors %}
-            {% for field in form2 %}
-            {% for error in field.errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}</strong>
-            </div>
-            {% endfor %}
-            {% endfor %}
-            {% for error in form2.non_field_errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}</strong>
-            </div>
-        {% endfor %}
-            {% endif %}
+                {% endif %}
 
                 <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
             </form>
+            {% endif %}
+            <h4>Enter New Assignment Type</h4>
+            <div>
+                <form action="{% url 'grades:NewType' indCourse.id%}" method="post">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-md-6 mb-2">
+                            <label for="ass_type">Assignment Type</label>
+                            <input class="form-control " type="text" name="ass_type" id="ass_type"
+                                placeholder="E.g. test" required>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <label for="grade_percentage">Assignment Weight</label>
+                            <input class="form-control" type="number" name="grade_percentage" id="grade_percentage"
+                                placeholder="E.g. 25%" required>
+                        </div>
+                        <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
+            (in percent)</label>
+        <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
+                    </div>
+                    {% if form2.errors %}
+                    {% for field in form2 %}
+                    {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                    {% endfor %}
+                    {% endfor %}
+                    {% for error in form2.non_field_errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+
+                    <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
+                </form>
+            </div>
         </div>
-    </div>
 
 
 
